--- a/js-portfolio/package.json
+++ b/js-portfolio/package.json
@@ -28,7 +28,11 @@
     "@babel/plugin-transform-runtime": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "stylus": "^0.55.0",
+    "stylus-loader": "^6.2.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
